force-app/main/default/objects/SVMXC__PM_Plan_Template__c/fields/SVMXC__SM_Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Adjustment_Type__c</fullName>
    <description>This field is to indicate the adjustment type. 
Actual – adjust the next Scheduled On date by the actual difference in Activity Date and Preferred Start date of the last WO
Fixed – adjust the next date by a fixed value</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>