force-app/main/default/objects/SVMXC__PM_Plan_Template__c/fields/SVMXC__SM_Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Schedule_Type__c</fullName>
    <description>Defines the type of PM Plan Template - either Time-based or Condition-based</description>
    <inlineHelpText>Defines the type of PM Plan Template - either Time-based or Condition-based</inlineHelpText>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Condition Based</fullName>
            </value>
            <value>
                <fullName>Time Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>