force-app/main/default/objects/SVMXC__PM_Plan_Template__c/fields/SVMXC__SM_Unit_Value__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Unit_Value__c</fullName>
    <description>Time by which the first PM work order to be delayed from the start date of the PM Plan.</description>
    <label>Start Date Delay</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>