force-app/main/default/objects/SVMXC__PM_Plan_Template__c/fields/SVMXC__Status__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Status__c</fullName>
    <formula>If( SVMXC__Schedule_Count__c &gt; 0, &apos;Complete&apos;, &apos;Incomplete&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>