force-app/main/default/objects/SVMXC__PM_Plan_Template__c/listViews/SVMXC__All_PM_Plan_Templates.listView-meta.xml
<ListView>
    <fullName>SVMXC__All_PM_Plan_Templates</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__Coverage_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All PM Plan Templates</label>
    <language>en_US</language>
</ListView>